--- a/lambda/sample-function1/package.json
+++ b/lambda/sample-function1/package.json
@@ -12,6 +12,7 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
+    "dayjs": "^1.11.19",
     "esbuild": "^0.14.14"
   },
   "devDependencies": {
