--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,8 @@
     "dayjs": "^1.11.19",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "shared-libs": "*"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
