--- a/lambda/sample-function1/package.json
+++ b/lambda/sample-function1/package.json
@@ -13,7 +13,8 @@
   },
   "dependencies": {
     "dayjs": "^1.11.19",
-    "esbuild": "^0.14.14"
+    "esbuild": "^0.14.14",
+    "shared-libs": "*"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.10",
