--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "workspaces": [
     "frontend",
-    "lambda/sample-function1",
-    "lambda/sample-function2",
+    "lambda/*",
     "shared/libs"
-  ]
+  ],
+  "packageManager": "yarn@4.12.0"
 }
