--- a/shared/libs/package.json
+++ b/shared/libs/package.json
@@ -2,7 +2,7 @@
   "name": "shared-libs",
   "version": "1.0.0",
   "private": true,
-  "main": "date-utils.ts",
+  "main": "index.ts",
   "dependencies": {
     "dayjs": "^1.11.19"
   },
