--- a/lambda/sample-function1/package.json
+++ b/lambda/sample-function1/package.json
@@ -12,7 +12,7 @@
     "test": "npm run compile && npm run unit"
   },
   "dependencies": {
-    "esbuild": "^0.14.14",
+    "esbuild": "^0.24.0",
     "shared-libs": "*"
   },
   "devDependencies": {
@@ -25,5 +25,8 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
+  },
+  "installConfig": {
+    "hoistingLimits": "workspaces"
   }
 }
