--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "workspaces": [
     "frontend",
-    "lambda/*",
+    "sample-function1",
+    "sample-function2",
     "shared/libs"
   ],
   "packageManager": "yarn@4.12.0"
